<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.imise</groupId>
	<artifactId>tool3lgm</artifactId>
	<version>1.0</version>
	<packaging>jar</packaging>
	<dependencies>
		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>7.1.0</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>3.3.3</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest -->
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest</artifactId>
			<version>2.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>nl.jqno.equalsverifier</groupId>
			<artifactId>equalsverifier</artifactId>
			<version>3.1.10</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/log4j/log4j -->
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>
		<dependency>
			<groupId>javax.help</groupId>
			<artifactId>javahelp</artifactId>
			<version>2.0.02</version>
		</dependency>
		<dependency>
			<groupId>net.sf.saxon</groupId>
			<artifactId>saxon</artifactId>
			<version>8.7</version>
		</dependency>
		<dependency>
			<groupId>de.axs</groupId>
			<artifactId>de-axs-utils</artifactId>
			<version>1.0.0</version>
			<!-- Das hier muss man machen, wenn man per Maven eine Datei lokal -->
			<!-- verlinken will. Hierbei liget die Datei im Projektordner unter -->
			<!-- Plugins/ -->
			<!-- <scope>system</scope> -->
			<!-- <systemPath>${basedir}/../Plugins/de-axs-utils-1.0.0.jar</systemPath> -->
		</dependency>
		<!-- <dependency> <groupId>de.imise</groupId> <artifactId>de.imise.twatd</artifactId> 
			<version>0.0.1</version> </dependency> -->
		<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>27.1-jre</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
			<version>4.3</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
		<!-- <dependency> -->
		<!-- <groupId>org.apache.commons</groupId> -->
		<!-- <artifactId>commons-lang3</artifactId> -->
		<!-- <version>3.9</version> -->
		<!-- </dependency> -->

		<!-- https://mvnrepository.com/artifact/org.apache.jena/jena-core -->
		<dependency>
			<groupId>org.apache.jena</groupId>
			<artifactId>jena-core</artifactId>
			<version>3.14.0</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
		<!-- <dependency> -->
		<!-- <groupId>org.slf4j</groupId> -->
		<!-- <artifactId>slf4j-api</artifactId> -->
		<!-- <version>1.7.29</version> -->
		<!-- </dependency> -->

		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-jdk14 -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-jdk14</artifactId>
			<version>1.7.29</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.apple/AppleJavaExtensions -->
		<dependency>
			<groupId>com.apple</groupId>
			<artifactId>AppleJavaExtensions</artifactId>
			<version>1.4</version>
		</dependency>

	</dependencies>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
	</properties>
	<build>
		<finalName>tool3lgm</finalName>
		<plugins>
			<!-- http://maven.apache.org/shared/maven-archiver/index.html -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>de.imise.tool3lgm.Tool3lgmMain</mainClass>
						</manifest>
						<manifestEntries>
							<!-- <Class-Path>here can only named jars placed or directories containing 
								.class-files but not directories containing jar files</Class-Path> -->
							<!-- geht alles nicht wie es soll :( -->
							<!-- <Class-Path>./Plugins/tool3lgm.metamodel.original-1.0.0.jar ./Plugins/tool3lgm.metamodel.service-1.0.0.jar 
								./Plugins/tool3lgm.template.ihe-1.0.0.jar</Class-Path> -->
							<SplashScreen-Image>splash.gif</SplashScreen-Image>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-clean-plugin</artifactId>
				<version>2.5</version>
				<configuration>
					<!-- Plugins-Verzeichnis im Deploy-Projekt leeren -->
					<filesets>
						<fileset>
							<directory>../de.imise.tool3lgm.deploy/Tool3lgm/Plugins</directory>
							<includes>
								<include>**/*</include>
							</includes>
							<followSymlinks>false</followSymlinks>
						</fileset>
						<!-- Plugins-Verzeichnis im Eclipse-Development-Projekt leeren -->
						<fileset>
							<directory>../de.imise.tool3lgm/Plugins/</directory>
							<includes>
								<include>**/*</include>
							</includes>
							<followSymlinks>false</followSymlinks>
						</fileset>
						<!-- lib-Verzeichnis im Deploy-Projekt leeren -->
						<fileset>
							<directory>../de.imise.tool3lgm.deploy/Tool3lgm/lib</directory>
							<includes>
								<include>**/*</include>
							</includes>
							<followSymlinks>false</followSymlinks>
						</fileset>
					</filesets>
				</configuration>
			</plugin>
			<!-- lib-Verzeichnis im Deploy-Projekt wieder füllen -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.1.1</version>
				<executions>
					<!-- alle Dependencies ins lib-Verzeichnis im Deploy-Projekt kopieren -->
					<execution>
						<id>copy-dependencies</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>../de.imise.tool3lgm.deploy/Tool3lgm/lib</outputDirectory>
							<overWriteReleases>false</overWriteReleases>
							<overWriteSnapshots>false</overWriteSnapshots>
							<overWriteIfNewer>true</overWriteIfNewer>
							<includeScope>compile</includeScope>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<!-- per Ant die tool3lgm.jar aus dem target ins deploy kopieren -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>1.8</version>
				<executions>
					<execution>
						<phase>package</phase>
						<configuration>
							<target>
								<copy
									file="${project.build.directory}/${project.artifactId}.${project.packaging}"
									tofile="../de.imise.tool3lgm.deploy/Tool3lgm/lib/${project.artifactId}.${project.packaging}" />
							</target>
						</configuration>
						<goals>
							<goal>run</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- <plugin> -->
			<!-- <groupId>org.codehaus.mojo</groupId> -->
			<!-- <artifactId>license-maven-plugin</artifactId> -->
			<!-- <version>1.20</version> -->
			<!-- <executions> -->
			<!-- <execution> -->
			<!-- <id>download-licenses</id> -->
			<!-- <goals> -->
			<!-- <goal>download-licenses</goal> -->
			<!-- </goals> -->
			<!-- </execution> -->
			<!-- </executions> -->
			<!-- </plugin> -->
		</plugins>
		<resources>
			<resource>
				<directory>src\main\resources</directory>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<directory>src\test\resources</directory>
			</testResource>
		</testResources>
		<!-- <pluginManagement> -->
		<!-- <plugins> -->
		<!-- <plugin> -->
		<!-- <groupId>org.apache.maven.plugins</groupId> -->
		<!-- <artifactId>maven-compiler-plugin</artifactId> -->
		<!-- <version>3.8.1</version> -->
		<!-- <configuration> -->
		<!-- <source>1.8</source> -->
		<!-- <target>1.8</target> -->
		<!-- </configuration> -->
		<!-- </plugin> -->
		<!-- </plugins> -->
		<!-- </pluginManagement> -->
	</build>

	<name>tool3lgm</name>
</project>
